RESOLVED FIXED115002
[Mac] REGRESSION (r142806): "Just Leaking" Console errors on launch
https://bugs.webkit.org/show_bug.cgi?id=115002
Summary [Mac] REGRESSION (r142806): "Just Leaking" Console errors on launch
Alexey Proskuryakov
Reported 2013-04-22 17:25:22 PDT
Getting errors like the below on launch (Lion only): Object 0x7fb61b804880 of class __NSCFData autoreleased with no pool in place - just leaking - break on objc_autoreleaseNoPool() to debug <rdar://problem/13254212>
Attachments
proposed fix (2.28 KB, patch)
2013-04-22 17:27 PDT, Alexey Proskuryakov
sam: review+
Alexey Proskuryakov
Comment 1 2013-04-22 17:27:39 PDT
Created attachment 199132 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-04-22 17:42:24 PDT
Note You need to log in before you can comment on or make changes to this bug.