        [Mac] REGRESSION (r142806): "Just Leaking" Console errors on launch         https://bugs.webkit.org/show_bug.cgi?id=115002         <rdar://problem/13254212>

Reviewed by Sam Weinig.

        * Shared/EntryPointUtilities/mac/LegacyProcess/ChildProcessMain.mm:
        (WebKit::BootstrapMain): Added an autorelease pool for code that uses Objective-C.



Canonical link: https://commits.webkit.org/133436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148937 268f45cc-cd09-0410-ab3c-d52691b4dbfc